[tool.poetry]
name = "interactive-session"
version = "0.0.2"
description = ""
authors = ["Bo Chen <bochen0909@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"
pybind11 = "^2.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
